substrate/frame/support/test/tests/construct_runtime_ui/undefined_call_part.stderr
error: `Pallet` does not have #[pallet::call] defined, perhaps you should remove `Call` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_call_part.rs:22:1
   |
22 |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
66 | / construct_runtime! {
67 | |     pub struct Runtime
68 | |     {
69 | |         System: frame_system::{Pallet, Call, Storage, Config<T>, Event<T>},
70 | |         Pallet: pallet::{Pallet, Call},
71 | |     }
72 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_call_check::is_call_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
